2009-06-17  David King  <davidk@openismus.com>

	* hildon/hildon-note.c: Add Gtk-Doc markup where appropriate. Correct
	several typos and errors throughout the documentation.

	Fixes: MB#4701 (HildonNote documentation lacks some Gtk-Doc markup and
	has some mistakes)

2009-06-18  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-note.c (hildon_note_realize):
	Make HildonNote support portrait mode.

	Fixes: NB#123448 (HildonNote is not portrait-friendly)

2009-06-17  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-color-chooser.c (hildon_color_chooser_new):
	Document this function

2009-06-17  David King  <davidk@openismus.com>

	* hildon/hildon-date-selector.c
	(hildon_date_selector_select_current_date)
	(hildon_date_selector_get_date): Update documentation regarding days,
	as the day of the month is dependent on both the month and the year.
	(hildon_date_selector_get_date): Fix documentation of output arguments.

	Fixes: MB#4698 (DateSelector documentation has bad output argument
	description, and the day depends on both the month and the year)

2009-06-17  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-caption.c: Other documentation fixes to
	HildonCaption.

2009-06-17  David King  <davidk@openismus.com>

	* hildon/hildon-caption.c: Minor documentation updates for
	HildonCaption. Fixes MB#4697.

2009-06-17  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-docs.sgml: Add hildon-version section.
	* doc/hildon-sections.txt:
	* hildon/hildon-version.h.in: Document versioning macros and
	add HILDON_VERSION.

2009-06-17  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-sections.txt: Remove HILDON_DISABLE_DEPRECATED
	from HildonPickerDialog section.

2009-06-16  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-banner.c (hildon_banner_bind_style)
	(screen_size_changed, hildon_banner_init)
	(hildon_banner_real_show_information)
	(hildon_banner_show_information_with_markup)