@@ -1,3 +1,9 @@
+2009-06-18  Alejandro Pinheiro <apinheiro@igalia.com>
+
+	* hildon/hildon-touch-selector-entry.c
+	* hildon/hildon-touch-selector.c
+	Update the documentation of the "text-column" property
+
 2009-06-17  David King  <davidk@openismus.com>
 
 	* hildon/hildon-note.c: Add Gtk-Doc markup where appropriate. Correct
